# get_model

./: .gitattributes  .gitignore  .gitmodules  Dockerfile  MANIFEST.in  README.md  engine.py  env.yml  env_osx.yml  environment.yml  environment_for_docker.yml  finetune.py  gencode.v40.hg38.feather  hatch.toml  pretrain.py  pyproject.toml  run_finetune.sh  run_finetune_from_pretrain_gbm.sh  run_finetune_from_scratch_gbm.sh  run_finetune_get_ab.sh  run_finetune_get_xf.sh  run_finetune_local.sh  run_pretrain.sh  run_pretrain_get_xf.sh  setup.py  utils.py
.github/workflows/: docker-build.yml
analysis/: astrocyte_tert_analysis.py  compare_one_shot.py  deg_analysis.py  finetune_sweep.py  gbm_dea_analysis.py  gbm_gene_dea.py  gbm_plot_cg.py  gbm_violin_plot.py  glioma_orig.py  glioma_parallel.py  k562_analysis.py  lora_ckpt_analysis.py  lora_gbm_dea.py  overlap_cage_with_basenji.py  paired_ttest.py  plot_all_patients.py  plot_cg.py  plot_gbm_all_chr_benchmark.py  sample_corr.py  tert_analysis.py  tf_atlas_zeroshot_sweep.py  utils.py
analysis/k562_cage_data/: basenji_split.py  enformer_eval.py  k562_analysis.py  write_encode_peaks.py
baselines/enformer/: enformer.py  engine.py  finetune_enformer.py  run_finetune_enformer.sh  train_enformer.sh
data/: gencode.v40.hg38.feather  hg38.ctcf_motif_count.num_celltype_gt_5.feather  hg38_4DN_average_insulation.ctcf.longrange.feather
dataset/: augmentation.py  dataset.py  insulation_sampler.py  io.py  splitter.py  zarr_dataset.py
datasets/: __init__.py  augmentation.py  collate.py  dataset.py  io.py  splitter.py
evals/astrocyte_quantile/: run.sh
evals/crispri/: enformer_background_norm.tsv  fulco_hyena.tsv  plot_perturbation_fulco_formal.py  run_fulco_score.py
evals/erythroblast/: Editable_A_scores.combined.scores.csv  cage_cd34_diff_rbc.bcl11a.contribution_scores.npy  cage_cd34_diff_rbc.bcl11a.contribution_scores_pooled.npy  cage_cd34_diff_rbc.hbb.contribution_scores.npy  cage_cd34_diff_rbc.hbb.contribution_scores_pooled.npy  cage_cd34_diff_rbc.hbg2.contribution_scores.npy  cage_cd34_diff_rbc.hbg2.contribution_scores_pooled.npy  cage_cd34_diff_rbc.klf1.contribution_scores.npy  cage_cd34_diff_rbc.klf1.contribution_scores_pooled.npy  cage_cd34_diff_rbc.myb.contribution_scores.npy  cage_cd34_diff_rbc.myb.contribution_scores_pooled.npy  cage_cd34_diff_rbc.nfix.contribution_scores.npy  cage_cd34_diff_rbc.nfix.contribution_scores_pooled.npy  hyena_aggregate_erythro_900region.tsv  plot_eryth_formal.py
get_model/: custom_callbacks.py  debug_run.py  debug_run_region.py  engine.py  finetune.py  inference.py  inference_engine.py  logger.py  lora.py  main.py  metrics.py  optim.py  pretrain.py  run.py  run_everything.py  run_mpra.py  run_ref_region.py  run_region.py  task.py  utils.py
get_model/config/: astrocyte_atac.yaml  astrocyte_v1_atac.yaml  chrombpnet_k562.yaml  chrombpnet_monocyte.yaml  chrombpnet_thp1.yaml  chrombpnetbias_thp1.yaml  config.py  dataset.yaml  dataset_template.yaml  debug.yaml  distance_map.yaml  eval_fetal_region.yaml  eval_gbm_dea.yaml  eval_gbm_fetal_ref_region.yaml  eval_k562_cage.yaml  eval_k562_fetal_nucleotide_motif_adaptor.yaml  eval_k562_fetal_nucleotide_region_finetune_atac.yaml  eval_k562_fetal_nucleotide_region_finetune_hic.yaml  eval_k562_fetal_ref_region.yaml  eval_k562_fetal_ref_region_cage.yaml  eval_k562_fetal_ref_region_dnase.yaml  eval_k562_fetal_ref_region_hic_abc_lora.yaml  eval_k562_fetal_ref_region_k562_hic_abc_lora.yaml  eval_k562_fetal_ref_region_k562_hic_lora_axial.yaml  eval_k562_fetal_ref_region_k562_hic_oe.yaml  eval_tfatlas_fetal_ref_region.yaml  eval_thp1_fetal_ref_region.yaml  fetal_region.yaml  fetal_region_erythroblast.yaml  fetal_region_mlp.yaml  fetal_region_v2.yaml  finetune_gbm.yaml  finetune_k562.yaml  finetune_k562_cage.yaml  finetune_k562_fetal.yaml  finetune_k562_fetal_lora_positional.yaml  finetune_k562_manitou.yaml  finetune_tutorial.yaml  (+10 more)
model/: model.py  motif.py  position_encoding.py  transformer.py
scripts/: prepare_mpra_data.py  run_chrombpnet.sh  run_enhancer_gene_benchmark.py  run_fetal_correlation_quantile_benchmark.sh  run_finetune.sh  run_finetune_from_pretrain_fetal_ab.sh  run_finetune_from_pretrain_gbm.sh  run_finetune_from_pretrain_gbm_ab.sh  run_finetune_from_scratch.sh  run_finetune_from_scratch_gbm.sh  run_finetune_get_ab_with_atac_gbm.sh  run_finetune_get_xf_eval.sh  run_finetune_get_xf_with_atac.sh  run_finetune_get_xfx_with_atac_bias.sh  run_finetune_local.sh  run_gbm_benchmark.sh  run_gbm_benchmark_finetune.sh  run_gbm_dea.sh  run_gbm_dea_oneshot.sh  run_gbm_dea_oneshot_natac.sh  run_gbm_dea_oneshot_watac.sh  run_gbm_dea_zeroshot.sh  run_k562_cage.sh  run_pretrain_get.sh  run_pretrain_get_xf.sh  run_tfatlas_benchmark.sh  run_tfatlas_zeroshot.sh  setup_env.sh  submit_to_manitou.sh
test/: gbm_tert_analysis.py  plot_perturbation_fulco.py  plot_perturbation_fulco_formal.py  run_eryth_score.py  run_fulco_score.py  test_add_expression.py  test_chrombpnet.py  test_ctcf.py  test_dataloader.py  test_dataset.py  test_datasets.py  test_debug_run.py  test_distance_contact_map.py  test_distance_map.py  test_everything_dataset.py  test_everything_task.py  test_extract_lora.py  test_fetal_region_motif_dataset.py  test_finetune_data.py  test_hdbscan.py  test_hic.py  test_hic_abc.py  test_inference_dataset.py  test_inference_dataset_pc.py  test_inference_reference_region_dataset.py  test_inference_region_dataset_pc.py  test_inspect_dataloader.py  test_mnll.py  test_model.py  test_modules.py  test_outerproductmean.py  test_perturbation_inference_reference_region_dataset.py  test_zarr_dataset.py  tmp_load_k562.py
tutorials/: Configuration.md  Dataloader.md  Finetune.md  Model Customization.md  astrocyte.rna.csv  finetune_pbmc.ipynb  finetune_pbmc_batac_eval.ipynb  finetune_pbmc_lo.ipynb  full_v1_pipeline.py  generate_get_region_data.ipynb  human_motif_cluster_id  infer_astrocyte.ipynb  interpret_cfg.yaml  predict_atac.ipynb  predict_atac.py  prepare_pbmc.ipynb  prepare_pbmc.py  prepare_pbmc_recall_peak.ipynb  preprocess_utils.py  pretrain_pbmc.ipynb
(+161 files in other folders)
